[project]
name = "albam"
version = "0.3.6"
description = "Import 3d models into Blender"
readme = "README.md"
authors = [ {name = "Sebastian A. Brachi"} ]
requires-python = "==3.11.*"
license = {file = "LICENSE"}
keywords = ["blender", "blender-addon", "import", "3d models", "3d formats"]

dependencies = [
  "bpy==4.1",
]

[project.optional-dependencies]
test = [
  "coverage[toml]",
  "flake8-pyproject",
  "pytest",
  "pytest-xdist",
  "pytest-subtests"
#  "pybc7",
#  "zstd"
]


[tool.black]
line-length = 110


[tool.coverage.run]
omit = [ "*/structs/*.py", "*/albam_vendor/*" ]


[tool.flake8]
max-line-length = 110
exclude = ["structs", "albam_vendor", ".venv"]
# F722: needed for Blender props annotations
# e.g.:
# class MyPanel(bpy.types.Panel):
#     my_prop : bpy.props.BoolProperty()

# W503 and W504 seem to contradict each other:w
ignore = ["E203", "F722", "W504"]
