[project]
name = "Albam"
version = "0.4.0"
description = "Import and Export game engine formats in Blender"
readme = "README.md"
authors = [ {name = "Sebastian A. Brachi"}, {name = "Henry of Carim"} ]
requires-python = ">=3.10, <=3.12"
license = {file = "LICENSE"}
keywords = ["modding", "game-modding", "blender-addon", "import", "export"]

dependencies = [
  'bpy == 3.6.0; python_version == "3.10.*"',
  'bpy == 4.2.0; python_version == "3.11.*"',
]

[project.optional-dependencies]

tests = [
  "pytest",
  "pytest-subtests",
  "coverage[toml]",
  "flake8-pyproject",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 110

[tool.coverage.run]
omit = [ "*/albam_vendor/*" ]

[tool.flake8]
max-line-length = 110
exclude = ["albam_vendor", ".venv"]

# F722: needed for Blender props annotations such as
# ```
# class MyPanel(bpy.types.Panel):
#     my_prop : bpy.props.BoolProperty()
# ```
# W503 and W504 seem to contradict each other
ignore = ["E203", "F722", "W504"]
